[gd_scene load_steps=2 format=3 uid="uid://bm0ka5n0co0sb"]

[ext_resource type="Script" path="res://Scripts/MushSpace/MushFarmButtons.gd" id="1_hm1iy"]

[node name="FarmButtons" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hm1iy")

[node name="PlantButton" type="Button" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 50.0
text = "Plant"

[node name="HarvestButton" type="Button" parent="."]
layout_mode = 0
offset_top = 55.0
offset_right = 100.0
offset_bottom = 105.0
text = "Harvest"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 0
offset_top = 110.0
offset_right = 100.0
offset_bottom = 160.0
text = "Delete"
